now body of post is work

--- a/pages/upload.html
+++ b/pages/upload.html
@@ -28,7 +28,7 @@
         </svg>
         Upload file
 
-        <input type="file" id="uploadFile1" class="hidden" />
+        <input type="file" id="uploadFile1" class="hidden" name="file" />
         <p class="text-xs font-medium text-slate-400 mt-2">
           PNG, JPG SVG, WEBP, and GIF are Allowed.
         </p>
