make the code more clean and remove some useless functions finally add a some pages html

--- a/pages/post-request-error-upload.html
+++ b/pages/post-request-error-upload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>POST Request Data</title>
+    <title>ERROR UPLOAD</title>
   </head>
 
   <body class="min-h-screen bg-black flex items-center justify-center">
@@ -13,8 +13,8 @@
       class="bg-zinc-900 border border-zinc-700 rounded-xl shadow-lg p-6 w-full max-w-xl"
     >
 
-      <h1 class="text-xl font-bold text-white text-center">
-        POST Request Body Send Successfully ✅
+      <h1 class="text-xl font-bold text-red-500 text-center">
+        Error: File is empty 🫗
       </h1>
       </div>
     </div>
