--- a/pages/post-request-upload.html
+++ b/pages/post-request-upload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>POST Request Data</title>
+    <title>POST Request Upload</title>
   </head>
 
   <body class="min-h-screen bg-black flex items-center justify-center">
@@ -14,7 +14,7 @@
     >
 
       <h1 class="text-xl font-bold text-white text-center">
-        POST Request Body Send Successfully ✅
+        POST Request File Uploaded Successfully ✅
       </h1>
       </div>
     </div>
