--- a/pages/post-request-data.html
+++ b/pages/post-request-data.html
@@ -23,7 +23,7 @@
 
 <!-- raw data -->
       <pre class="bg-black text-green-400 p-3 rounded text-sm overflow-x-auto">
-email=mdahani%40student.1337.ma&password=11111111111&remember-me=on        </pre>
+email=111111%40111111&password=22222222222&remember-me=on        </pre>
   </div>
   <div>
     <p class="text-sm text-zinc-400 mb-2 mt-4">
@@ -32,9 +32,9 @@ email=mdahani%40student.1337.ma&password=11111111111&remember-me=on        </pre
     <div class="space-y-2">
       <!-- parsed data -->
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
-<span class="text-blue-400 font-medium">email</span><span class="text-white">mdahani%40student.1337.ma</span></div>
+<span class="text-blue-400 font-medium">email</span><span class="text-white">111111%40111111</span></div>
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
-<span class="text-blue-400 font-medium">password</span><span class="text-white">11111111111</span></div>
+<span class="text-blue-400 font-medium">password</span><span class="text-white">22222222222</span></div>
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
 <span class="text-blue-400 font-medium">remember-me</span><span class="text-white">on</span></div>
     </div>
