--- a/pages/autoindex.html
+++ b/pages/autoindex.html
@@ -9,7 +9,7 @@
   <body class="min-h-screen bg-slate-900 text-slate-100 p-10">
     <div class="max-w-3xl mx-auto">
 <h1 class="text-3xl font-bold mb-6">
-  📂 Index of <span class="text-blue-400">/uploads/test</span>
+  📂 Index of <span class="text-blue-400">/uploads</span>
 </h1>
 <p class="text-sm text-slate-400 mb-6">
   📁 Directory listing generated automatically
@@ -20,6 +20,96 @@
   <div class="col-span-3 text-right">Size</div>
 </div>
 <ul class="space-y-2 text-sm">
+<li>
+  <a
+    href="failedtests.txt"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 failedtests.txt</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="tanbih_alghafilin.jpg"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 tanbih_alghafilin.jpg</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">120 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="style.css"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 style.css</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="post-request-data.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 post-request-data.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">2 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="webserv.cpp"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 webserv.cpp</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">2 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="main.cpp"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 main.cpp</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">2 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="upload.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 upload.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">2 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="test/"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6 text-blue-400">📁 test/</span>
+    <span class="col-span-3 text-slate-400">Directory</span>
+    <span class="col-span-3 text-right text-slate-400">—</span>
+  </a>
+</li>
+<li>
+  <a
+    href="delete.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 delete.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">2 KB</span>
+  </a>
+</li>
 <footer class="mt-10 text-center text-xs text-slate-500">
   ⚙️ webserv • autoindex
 </footer>
