redirection is work now finally, now i try to handle DELETE request

--- a/pages/autoindex.html
+++ b/pages/autoindex.html
@@ -92,6 +92,16 @@
 </li>
 <li>
   <a
+    href="Makefile"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 Makefile</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
     href="test/"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
