add location rules on post and delete method

--- a/pages/autoindex.html
+++ b/pages/autoindex.html
@@ -22,12 +22,12 @@
 <ul class="space-y-2 text-sm">
 <li>
   <a
-    href="imgi_10_ImageOfHTTPRequestResponse.png"
+    href="main.cpp"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 imgi_10_ImageOfHTTPRequestResponse.png</span>
+    <span class="col-span-6">📄 main.cpp</span>
     <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">38 KB</span>
+    <span class="col-span-3 text-right text-slate-400">2 KB</span>
   </a>
 </li>
 <footer class="mt-10 text-center text-xs text-slate-500">
