add some styles in index.html (7la9na 3la l7ala)

--- a/pages/autoindex.html
+++ b/pages/autoindex.html
@@ -9,7 +9,7 @@
   <body class="min-h-screen bg-slate-900 text-slate-100 p-10">
     <div class="max-w-3xl mx-auto">
 <h1 class="text-3xl font-bold mb-6">
-  📂 Index of <span class="text-blue-400">/uploads</span>
+  📂 Index of <span class="text-blue-400">/</span>
 </h1>
 <p class="text-sm text-slate-400 mb-6">
   📁 Directory listing generated automatically
@@ -22,12 +22,142 @@
 <ul class="space-y-2 text-sm">
 <li>
   <a
-    href="main.cpp"
+    href="index.html"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 main.cpp</span>
+    <span class="col-span-6">📄 index.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="autoindex.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 autoindex.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">6 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="soloLeveling_2.mp4"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 soloLeveling_2.mp4</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">14315 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="tanbih_alghafilin.jpg"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 tanbih_alghafilin.jpg</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">120 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="style.css"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 style.css</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="post-request-data.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 post-request-data.html</span>
     <span class="col-span-3 text-slate-400">File</span>
     <span class="col-span-3 text-right text-slate-400">2 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="errors/"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6 text-blue-400">📁 errors/</span>
+    <span class="col-span-3 text-slate-400">Directory</span>
+    <span class="col-span-3 text-right text-slate-400">—</span>
+  </a>
+</li>
+<li>
+  <a
+    href="upload.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 upload.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">2 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="soloLeveling_1.mp4"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 soloLeveling_1.mp4</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">16469 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="sign-in.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 sign-in.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">8 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="l7ankalis.jpg"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 l7ankalis.jpg</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">9 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="uploads/"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6 text-blue-400">📁 uploads/</span>
+    <span class="col-span-3 text-slate-400">Directory</span>
+    <span class="col-span-3 text-right text-slate-400">—</span>
+  </a>
+</li>
+<li>
+  <a
+    href="post-request-upload.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 post-request-upload.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="delete.html"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 delete.html</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">3 KB</span>
   </a>
 </li>
 <footer class="mt-10 text-center text-xs text-slate-500">
