--- a/pages/index.html
+++ b/pages/index.html
@@ -4,14 +4,215 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- Font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Home</title>
+
+    <style>
+      @keyframes rotate {
+        100% {
+          transform: rotate(1turn);
+        }
+      }
+
+      .rainbow::before {
+        content: "";
+        position: absolute;
+        z-index: -2;
+        left: -50%;
+        top: -50%;
+        width: 200%;
+        height: 200%;
+        background-position: 100% 50%;
+        background-repeat: no-repeat;
+        background-size: 50% 30%;
+        filter: blur(6px);
+        background-image: linear-gradient(#fff);
+        animation: rotate 4s linear infinite;
+      }
+
+      @keyframes shine {
+        0% {
+          background-position: 0% 50%;
+        }
+
+        50% {
+          background-position: 100% 50%;
+        }
+
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+
+      .button-bg {
+        background: conic-gradient(
+          from 0deg,
+          #00f5ff,
+          #000,
+          #000,
+          #00f5ff,
+          #000,
+          #000,
+          #000,
+          #00f5ff
+        );
+        background-size: 300% 300%;
+        animation: shine 6s ease-out infinite;
+      }
+
+      .button-wrapper::before {
+        animation: spin-gradient 4s linear infinite;
+      }
+
+      @keyframes spin-gradient {
+        from {
+          transform: rotate(0deg);
+        }
+
+        to {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
   </head>
-  <body class="w-full h-[100vh] flex justify-center items-center">
-    <h1
-      class="font-bold italic bg-black text-white p-3 rounded cursor-pointer transition-all border hover:border-black hover:bg-white hover:text-black"
+  <body class="font-[Outfit] text-white w-full px-5 relative">
+    <!-- Global Background -->
+    <div class="fixed inset-0 -z-10">
+      <div
+        class="h-full w-full bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"
+      ></div>
+    </div>
+
+    <!-- nav-bar -->
+    <nav
+      class="m-5 flex items-center border mx-auto w-full max-w-md justify-center gap-5 border-slate-700 px-6 py-4 rounded-full text-white text-sm"
     >
-      HELLO FROM WEBSERV
-    </h1>
+      <div
+        class="button-bg rounded-full p-0.5 hover:scale-105 transition duration-300 active:scale-100"
+      >
+        <a
+          class="block px-8 text-sm py-3 text-white rounded-full font-medium bg-gray-800"
+          href="sign-in.html"
+        >
+          LOGIN
+        </a>
+      </div>
+
+      <div
+        class="rainbow relative z-0 bg-white/15 overflow-hidden p-0.5 flex items-center justify-center rounded-full hover:scale-105 transition duration-300 active:scale-100"
+      >
+        <a
+          class="px-8 text-sm py-3 text-white rounded-full font-medium bg-gray-900/80 backdrop-blur"
+          href="upload.html"
+        >
+          UPLOAD
+        </a>
+      </div>
+
+      <div
+        class="relative inline-block p-0.5 rounded-full overflow-hidden hover:scale-105 transition duration-300 active:scale-100 before:content-[''] before:absolute before:inset-0 before:bg-[conic-gradient(from_0deg,_#00F5FF,_#00F5FF30,_#00F5FF)] button-wrapper"
+      >
+        <a
+          href="delete.html"
+          class="block relative z-10 bg-gray-800 text-white rounded-full px-8 py-3 font-medium text-sm"
+        >
+          DELETE
+        </a>
+      </div>
+    </nav>
+
+    <!-- Hero -->
+    <section class="my-15">
+      <div class="flex justify-center gap-3">
+        <h1
+          class="text-6xl font-bold bg-gradient-to-r from-[#8B5CF6] via-[#9938CA] to-[#E0724A] text-transparent bg-clip-text"
+        >
+          503 Service Unavailable
+        </h1>
+        <p class="font-medium text-orange-500">Team</p>
+      </div>
+    </section>
+
+    <!-- Our Team -->
+
+    <section>
+      <h1 class="text-3xl font-medium text-slate-300 text-center">
+        Meet Our Team
+      </h1>
+      <p class="text-slate-400 text-center">
+        The people behind the product, passionate about what they do.
+      </p>
+      <div class="flex flex-wrap items-center justify-center gap-6 mt-12">
+        <div class="max-w-80 bg-black text-white rounded-2xl">
+          <div class="relative -mt-px overflow-hidden rounded-2xl">
+            <img
+              src="https://cdn.intra.42.fr/users/9abf94395f63c0f539aba879fc6b03f2/mait-all.jpg"
+              alt=""
+              class="h-[270px] w-full rounded-2xl hover:scale-105 transition-all duration-300 object-cover object-top"
+            />
+            <div
+              class="absolute bottom-0 z-10 h-60 w-full bg-gradient-to-t pointer-events-none from-black to-transparent"
+            ></div>
+          </div>
+          <div class="px-4 pb-6 text-center">
+            <p class="mt-4 text-lg">Mohamed Ait Alla</p>
+            <p
+              class="text-sm font-medium bg-gradient-to-r from-[#8B5CF6] via-[#9938CA] to-[#E0724A] text-transparent bg-clip-text"
+            >
+              Server Core & CGI
+            </p>
+          </div>
+        </div>
+        <div class="max-w-80 bg-black text-white rounded-2xl">
+          <div class="relative -mt-px overflow-hidden rounded-2xl">
+            <img
+              src="https://cdn.intra.42.fr/users/3a062fe0a72b53fa20b514c60930f9e3/mdahani.jpg"
+              alt=""
+              class="h-[270px] w-full rounded-2xl hover:scale-105 transition-all duration-300 object-cover object-top"
+            />
+            <div
+              class="absolute bottom-0 z-10 h-60 w-full bg-gradient-to-t pointer-events-none from-black to-transparent"
+            ></div>
+          </div>
+          <div class="px-4 pb-6 text-center">
+            <p class="mt-4 text-lg">Mohamed Dahani</p>
+            <p
+              class="text-sm font-medium bg-gradient-to-r from-[#8B5CF6] via-[#9938CA] to-[#E0724A] text-transparent bg-clip-text"
+            >
+              Response [GET - POST - DELETE], Parsing Request, Cookies & Session
+              Management
+            </p>
+          </div>
+        </div>
+        <div class="max-w-80 bg-black text-white rounded-2xl">
+          <div class="relative -mt-px overflow-hidden rounded-2xl">
+            <img
+              src="https://cdn.intra.42.fr/users/c65c1e424290078cf59023674dfc56c2/obarais.jpg"
+              alt=""
+              class="h-[270px] w-full rounded-2xl hover:scale-105 transition-all duration-300 object-cover object-top"
+            />
+            <div
+              class="absolute bottom-0 z-10 h-60 w-full bg-gradient-to-t pointer-events-none from-black to-transparent"
+            ></div>
+          </div>
+          <div class="px-4 pb-6 text-center">
+            <p class="mt-4 text-lg">Ousama Barais</p>
+            <p
+              class="text-sm font-medium bg-gradient-to-r from-[#8B5CF6] via-[#9938CA] to-[#E0724A] text-transparent bg-clip-text"
+            >
+              Parsing Config File
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
