--- a/pages/post-request-data.html
+++ b/pages/post-request-data.html
@@ -23,7 +23,11 @@
 
 <!-- raw data -->
       <pre class="bg-black text-green-400 p-3 rounded text-sm overflow-x-auto">
-email=mdahani%40student.1337.ma&password=1337        </pre>
+12
+hello=world&age=42
+0
+
+        </pre>
   </div>
   <div>
     <p class="text-sm text-zinc-400 mb-2 mt-4">
@@ -32,9 +36,13 @@ email=mdahani%40student.1337.ma&password=1337        </pre>
     <div class="space-y-2">
       <!-- parsed data -->
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
-<span class="text-blue-400 font-medium">email</span><span class="text-white">mdahani%40student.1337.ma</span></div>
+<span class="text-blue-400 font-medium">12
+hello</span><span class="text-white">world</span></div>
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
-<span class="text-blue-400 font-medium">password</span><span class="text-white">1337</span></div>
+<span class="text-blue-400 font-medium">age</span><span class="text-white">42
+0
+
+</span></div>
     </div>
   </div>
   <!-- Redirect Button -->
