fix(CGI): fix an issue when a cgi script is running and client disconnection occurs

--- a/pages/autoindex.html
+++ b/pages/autoindex.html
@@ -9,7 +9,7 @@
   <body class="min-h-screen bg-slate-900 text-slate-100 p-10">
     <div class="max-w-3xl mx-auto">
 <h1 class="text-3xl font-bold mb-6">
-  📂 Index of <span class="text-blue-400">/cgi-bin</span>
+  📂 Index of <span class="text-blue-400">/uploads</span>
 </h1>
 <p class="text-sm text-slate-400 mb-6">
   📁 Directory listing generated automatically
@@ -22,12 +22,22 @@
 <ul class="space-y-2 text-sm">
 <li>
   <a
-    href="hello.py"
+    href="failedtests.txt"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 hello.py</span>
+    <span class="col-span-6">📄 failedtests.txt</span>
     <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">0 KB</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="main.cpp"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 main.cpp</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">2 KB</span>
   </a>
 </li>
 <footer class="mt-10 text-center text-xs text-slate-500">
