remove comment's for debug and change all resources of pages html to folder www

--- a/www/post-request-data.html
+++ b/www/post-request-data.html
@@ -23,11 +23,7 @@
 
 <!-- raw data -->
       <pre class="bg-black text-green-400 p-3 rounded text-sm overflow-x-auto">
-12
-hello=world&age=42
-0
-
-        </pre>
+email=hello%40hello.com&password=qaza&remember-me=on        </pre>
   </div>
   <div>
     <p class="text-sm text-zinc-400 mb-2 mt-4">
@@ -36,13 +32,11 @@ hello=world&age=42
     <div class="space-y-2">
       <!-- parsed data -->
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
-<span class="text-blue-400 font-medium">12
-hello</span><span class="text-white">world</span></div>
+<span class="text-blue-400 font-medium">email</span><span class="text-white">hello%40hello.com</span></div>
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
-<span class="text-blue-400 font-medium">age</span><span class="text-white">42
-0
-
-</span></div>
+<span class="text-blue-400 font-medium">password</span><span class="text-white">qaza</span></div>
+<div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
+<span class="text-blue-400 font-medium">remember-me</span><span class="text-white">on</span></div>
     </div>
   </div>
   <!-- Redirect Button -->
