check some rules in delete method is work

--- a/www/autoindex.html
+++ b/www/autoindex.html
@@ -32,22 +32,12 @@
 </li>
 <li>
   <a
-    href="Tom Angry Face Cartoon.jpeg"
+    href="Makefile"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 Tom Angry Face Cartoon.jpeg</span>
+    <span class="col-span-6">📄 Makefile</span>
     <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">16 KB</span>
-  </a>
-</li>
-<li>
-  <a
-    href="main.cpp"
-    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
-  >
-    <span class="col-span-6">📄 main.cpp</span>
-    <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">2 KB</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
   </a>
 </li>
 <footer class="mt-10 text-center text-xs text-slate-500">
