add a default configfile & remove all print debug finally handle the the user try to go out of folder of program

--- a/www/autoindex.html
+++ b/www/autoindex.html
@@ -22,22 +22,32 @@
 <ul class="space-y-2 text-sm">
 <li>
   <a
-    href="failedtests.txt"
+    href="style.css"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 failedtests.txt</span>
+    <span class="col-span-6">📄 style.css</span>
     <span class="col-span-3 text-slate-400">File</span>
     <span class="col-span-3 text-right text-slate-400">1 KB</span>
   </a>
 </li>
 <li>
   <a
-    href="Makefile"
+    href="sbe3.txt"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 Makefile</span>
+    <span class="col-span-6">📄 sbe3.txt</span>
     <span class="col-span-3 text-slate-400">File</span>
     <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="l7ankalis.jpg"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 l7ankalis.jpg</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">9 KB</span>
   </a>
 </li>
 <footer class="mt-10 text-center text-xs text-slate-500">
