fix: return 400 in bad requests

--- a/www/autoindex.html
+++ b/www/autoindex.html
@@ -22,12 +22,12 @@
 <ul class="space-y-2 text-sm">
 <li>
   <a
-    href="style.css"
+    href="l7ankalis.jpg"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 style.css</span>
+    <span class="col-span-6">📄 l7ankalis.jpg</span>
     <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+    <span class="col-span-3 text-right text-slate-400">9 KB</span>
   </a>
 </li>
 <li>
@@ -42,12 +42,32 @@
 </li>
 <li>
   <a
-    href="l7ankalis.jpg"
+    href="style.css"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 l7ankalis.jpg</span>
+    <span class="col-span-6">📄 style.css</span>
     <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">9 KB</span>
+    <span class="col-span-3 text-right text-slate-400">1 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="soloLeveling_1.mp4"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 soloLeveling_1.mp4</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">16469 KB</span>
+  </a>
+</li>
+<li>
+  <a
+    href="home_watcher.log"
+    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
+  >
+    <span class="col-span-6">📄 home_watcher.log</span>
+    <span class="col-span-3 text-slate-400">File</span>
+    <span class="col-span-3 text-right text-slate-400">681 KB</span>
   </a>
 </li>
 <footer class="mt-10 text-center text-xs text-slate-500">
