--- a/www/post-request-data.html
+++ b/www/post-request-data.html
@@ -23,7 +23,7 @@
 
 <!-- raw data -->
       <pre class="bg-black text-green-400 p-3 rounded text-sm overflow-x-auto">
-email=mdahani%40student.1337.ma&password=1337        </pre>
+email=me%40me.com&password=memememememememememememememe&remember-me=on        </pre>
   </div>
   <div>
     <p class="text-sm text-zinc-400 mb-2 mt-4">
@@ -32,9 +32,11 @@ email=mdahani%40student.1337.ma&password=1337        </pre>
     <div class="space-y-2">
       <!-- parsed data -->
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
-<span class="text-blue-400 font-medium">email</span><span class="text-white">mdahani%40student.1337.ma</span></div>
+<span class="text-blue-400 font-medium">email</span><span class="text-white">me%40me.com</span></div>
 <div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
-<span class="text-blue-400 font-medium">password</span><span class="text-white">1337</span></div>
+<span class="text-blue-400 font-medium">password</span><span class="text-white">memememememememememememememe</span></div>
+<div class="flex justify-between bg-zinc-800 px-4 py-2 rounded">
+<span class="text-blue-400 font-medium">remember-me</span><span class="text-white">on</span></div>
     </div>
   </div>
   <!-- Redirect Button -->
