request and response is stable now

--- a/www/autoindex.html
+++ b/www/autoindex.html
@@ -9,7 +9,7 @@
   <body class="min-h-screen bg-slate-900 text-slate-100 p-10">
     <div class="max-w-3xl mx-auto">
 <h1 class="text-3xl font-bold mb-6">
-  📂 Index of <span class="text-blue-400">/cgi-bin</span>
+  📂 Index of <span class="text-blue-400">/uploads</span>
 </h1>
 <p class="text-sm text-slate-400 mb-6">
   📁 Directory listing generated automatically
@@ -22,80 +22,32 @@
 <ul class="space-y-2 text-sm">
 <li>
   <a
-    href="l7ankalis.jpg"
-    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
-  >
-    <span class="col-span-6">📄 l7ankalis.jpg</span>
-    <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">9 KB</span>
-  </a>
-</li>
-<li>
-  <a
-    href="test.php"
-    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
-  >
-    <span class="col-span-6">📄 test.php</span>
-    <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">2 KB</span>
-  </a>
-</li>
-<li>
-  <a
-    href="test.sh"
-    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
-  >
-    <span class="col-span-6">📄 test.sh</span>
-    <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">1 KB</span>
-  </a>
-</li>
-<li>
-  <a
-<<<<<<< HEAD
-    href="test_post.py"
-    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
-  >
-    <span class="col-span-6">📄 test_post.py</span>
-    <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">2 KB</span>
-=======
     href="style.css"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
     <span class="col-span-6">📄 style.css</span>
     <span class="col-span-3 text-slate-400">File</span>
     <span class="col-span-3 text-right text-slate-400">1 KB</span>
->>>>>>> develop
   </a>
 </li>
 <li>
   <a
-<<<<<<< HEAD
-    href="timeOut.py"
+    href="sbe3.txt"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 timeOut.py</span>
+    <span class="col-span-6">📄 sbe3.txt</span>
     <span class="col-span-3 text-slate-400">File</span>
     <span class="col-span-3 text-right text-slate-400">1 KB</span>
-=======
-    href="soloLeveling_1.mp4"
-    class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
-  >
-    <span class="col-span-6">📄 soloLeveling_1.mp4</span>
-    <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">16469 KB</span>
   </a>
 </li>
 <li>
   <a
-    href="home_watcher.log"
+    href="l7ankalis.jpg"
     class="grid grid-cols-12 gap-4 hover:bg-slate-800 rounded px-2 py-1"
   >
-    <span class="col-span-6">📄 home_watcher.log</span>
+    <span class="col-span-6">📄 l7ankalis.jpg</span>
     <span class="col-span-3 text-slate-400">File</span>
-    <span class="col-span-3 text-right text-slate-400">681 KB</span>
->>>>>>> develop
+    <span class="col-span-3 text-right text-slate-400">9 KB</span>
   </a>
 </li>
 <footer class="mt-10 text-center text-xs text-slate-500">
