--- a/www/errors/504.html
+++ b/www/errors/504.html
@@ -12,7 +12,7 @@
     >
       <h1 class="text-9xl font-extrabold text-white tracking-widest">504</h1>
 
-      <h3 class="text-white bg-red-800 px-2 text-sm rounded rotate-12 absolute">
+      <h3 class="bg-yellow-500 px-2 text-sm rounded rotate-12 absolute">
         Gateway Timeout
       </h3>
 
@@ -23,10 +23,10 @@
 
       <a
         href="/"
-        class="mt-8 relative inline-block text-sm font-medium text-red-800 group focus:outline-none focus:ring"
+        class="mt-8 relative inline-block text-sm font-medium text-yellow-500 group focus:outline-none focus:ring"
       >
         <span
-          class="absolute inset-0 transition-transform translate-x-0.5 translate-y-0.5 bg-red-800 group-hover:translate-x-0 group-hover:translate-y-0"
+          class="absolute inset-0 transition-transform translate-x-0.5 translate-y-0.5 bg-yellow-500 group-hover:translate-x-0 group-hover:translate-y-0"
         ></span>
 
         <span
