docs: add API.md documenting supported HTTP features

--- a/www/post-request-upload.html
+++ b/www/post-request-upload.html
@@ -14,7 +14,7 @@
     >
 
       <h1 class="text-xl font-bold text-white text-center">
-        POST Request File Uploaded Successfully ✅
+        File Uploaded Successfully ✅
       </h1>
     </div>
   </body>
